<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="44dp"
            tools:layout_editor_absoluteY="101dp">

            <Space
                android:layout_width="match_parent"
                android:layout_height="56dp" />

            <TextView
                android:id="@+id/textLessorLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:text="@string/createLessorAccountTitle"
                android:textAlignment="center"
                android:textSize="34sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="72dp" />

            <EditText
                android:id="@+id/userNameField2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/userNameTextField"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#858585" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/userNameTextFieldTitle"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="73dp" />

            <EditText
                android:id="@+id/passwordField2"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:ems="10"
                android:hint="@string/passwordTextField"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#858585" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/passwordTextFieldTitle"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="79dp" />

            <Button
                android:id="@+id/submitButton2"
                android:layout_width="197dp"
                android:layout_height="76dp"
                android:layout_gravity="center"
                android:onClick="onCreateAccountButtonLessor"
                android:text="@string/createAccountButtonText"
                android:textSize="20sp" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/textLessorLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/createAccountTitle"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/submitButton2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/adminAccountButtonText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/lessorAccountButtonText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:text="@string/renterAccountButtonText"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>