<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="56dp" />

        <TextView
            android:id="@+id/textLessorLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-medium"
            android:text="@string/createAccountTitle"
            android:textAlignment="center"
            android:textSize="34sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/submitButton2"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="onCreateAdminButton"
            android:text="@string/adminAccountButtonText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="onCreateLessorButton"
            android:text="@string/lessorAccountButtonText"
            android:textSize="20sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="72dp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:onClick="onCreateRenterButton"
            android:text="@string/renterAccountButtonText"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>